# PyToolsmith

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  linting-and-tests.yml  publish.yml  tests.yml
src/pytoolsmith/: __init__.py  batch_tool.py  inject_into_docstring.py  multi_tool_caller.py  old.py  tool_definition.py  tool_library.py  tool_parameters.py  types.py  utils.py
src/pytoolsmith/config/: __init__.py  mappings.py
src/pytoolsmith/pytoolsmith_config/: __init__.py  batch_runner.py  mappings.py  serialization.py
src/pytoolsmith/types/: anthropic_types.py  bedrock_types.py  gemini_types.py  openai_types.py
tests/: conftest.py  test_batch_tool.py  test_bson_tool_definition.py  test_inject_into_docstring.py  test_not_pickable_call.py  test_pydantic_v1_tool_definition.py  test_tool_definition.py  test_tool_library.py  test_tool_streamer.py  test_utils.py
tests/config/: test_batch_runner.py  test_mappings.py
tests/live_llm_tests/: conftest.py  test_live_anthropic.py  test_parallel_calls.py  test_tooling_live.py
